--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,12 +3,11 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #013a47;
   height: 150px;
   padding: 20px;
   color: white;
@@ -22,7 +21,19 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.visual, .ideas {
+  margin-top: 30px;
+  padding-top: 60px;
+  display: inline-block;
+  height: 500px;
+  vertical-align: text-top;
+  text-align: center;
+}
+
+.visual {
+  width: 65%;
+}
+
+.ideas {
+  width: 30%;
 }
