--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,29 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 100px;
 }
 
 .App-header {
   background-color: #013a47;
-  height: 150px;
-  padding: 20px;
+  height: 60px;
   color: white;
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 1px 6px 2px rgba(0,0,0,.10), 0 1px 15px 5px rgba(0,0,0,.08);
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-logo {
+  height: 60px;
+  float: left;
 }
 
-.App-intro {
-  font-size: large;
+.App-header small {
+  float: right;
+  line-height: 60px;
+  font-size: 10px;
+  color: #dadada;
 }
 
 .visual, .ideas {
@@ -36,4 +41,35 @@
 
 .ideas {
   width: 30%;
+}
+
+.NewIdea {
+  max-width: 300px;
+}
+
+.NewIdea input {
+  -webkit-appearance: none;
+  appearance: none;
+  line-height: 20px;
+  font-size: 14px;
+  display: block;
+  border: none;
+  border: 2px solid #eaeaea;
+  margin: 0 0 5px 0;
+  width: 100%;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.NewIdea button {
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  background: #29BECD;
+  color: white;
+  font-weight: 700;
+  padding: 15px 25px;
+  border-radius: 3px;
+  font-size: 12px;
+  letter-spacing: 2px;
 }
