--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,9 @@
 .App-logo {
   height: 60px;
   float: left;
+  line-height: 60px;
+  font-size: 30px;
+  font-family: 'Shrikhand', cursive;
 }
 
 .App-header small {
