--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,3 +128,30 @@ text:hover {
   position: relative;
   top: -60px;
 }
+
+.VisWinner {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.VisWinner img {
+  width: 550px;
+  height: 350px;
+  padding-bottom: 20px;
+}
+
+.VisWinner button {
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  background: #29BECD;
+  color: white;
+  font-weight: 700;
+  padding: 15px 25px;
+  border-radius: 3px;
+  font-size: 12px;
+  letter-spacing: 2px;
+}
